--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-dom": "18.2.0",
     "react-native": "0.71.3",
     "react-native-gesture-handler": "~2.9.0",
+    "react-native-paper": "^5.9.0",
+    "react-native-radio-buttons": "^1.0.0",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
