--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-web": "~0.18.7"
+    "react-native-web": "~0.18.7",
+    "expo-sqlite": "~11.1.1",
+    "expo-file-system": "~15.2.2",
+    "expo-asset": "~8.9.1"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
