--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
   "dependencies": {
     "@react-native-picker/picker": "2.4.8",
     "expo": "^48.0.7",
+    "expo-asset": "~8.9.1",
     "expo-constants": "~14.2.1",
+    "expo-file-system": "~15.2.2",
     "expo-linking": "~4.0.1",
     "expo-router": "^1.5.3",
     "expo-splash-screen": "~0.18.1",
+    "expo-sqlite": "~11.1.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -23,10 +26,8 @@
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-web": "~0.18.7",
-    "expo-sqlite": "~11.1.1",
-    "expo-file-system": "~15.2.2",
-    "expo-asset": "~8.9.1"
+    "react-native-sqlite-storage": "^6.0.1",
+    "react-native-web": "~0.18.7"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
